#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-10-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999916 released.

        * Makefile.PL now dynamically looks for latest version
          of dependent module on CPAN to install.


2014-09-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999915 released.

        * Parser enhancement after discovering a couple of 
          command stripping flaws on a Solaris system.


2014-09-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999914 released.

        * Consoladation release. Multiple issues fixed so that
          FullAuto backward compatibility is restored.


2014-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999913 released.

        * Fixed multiple install issues in Makefile.PL,
          found when testing on Amazon.


2014-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999912 released.

        * Re-arranged some dependencies in Makefile.PL.


2014-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999911 released.

        * Added dependencies for CPAN::Mini.


2014-09-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999910 released.

        * Fixed slow logout from improper localhost cleanup.

        * Fixed password parsing for ftp.


2014-09-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999909 released.

        * New ability to install FullAuto with bundled