@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c16026d65c130e2840d9a1eabb0a4ed298f6c55a ChangeLog
+SHA1 49c4f46632af35ae9622ae584b5dfb6d30f0d0b5 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 f09fb7b24ee1c4a30712ba54bcea6da63d30d81e META.yml
-SHA1 0e68dd4fdfe6eb6541eb8aa2d0527eaf157394fd Makefile.PL
+SHA1 53b38882e917dd739d45848f703a91474f30d2c2 META.yml
+SHA1 7247e1cf6cbcff69ecea2825474fcf07a299e4f1 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 d23ea9d83803c54a58079d302481ef83859aab79 lib/Net/FullAuto.pm
+SHA1 9508a97c856edf0deb50cf89cc2cb51b9b3189ad lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 b2dfaf62ca7e9d17a2880cb194dde9296b81fefd lib/Net/FullAuto/FA_Core.pm
+SHA1 70abcf81691323fdd8972aca932b7af127870298 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUMGNJAAoJEBa/9Pad787EiDgH/0ed8LC9gCpvpx9MGUkF7/3c
-rc0bMVUSpkzPhY8gOeFJoUBmYsJ0u6DgjzjH5X3WwZ9Qh7bslH3Z8TKOI8O1aPff
-d3iE/rK2LIfzHcK8tEKjt3A5bE55Hv5J+WTT0AV+sGE00To43cilc8iEA+tjVT5i
-qT0+wqk5cwm08X+WX44Ja2+uvQwDVKoQaZppnBWToSgLkLXORFxocHyG6w71umc1
-6GK4k8vpqx6L1McyRnbV7fQ087B99O0qO/nfTbGh6scnvF0WixhQHt3RI8MNObjS
-Bjl2OK5PATJu+XrHZ7iD3xhgfImkC5jNr8D1gPMIGdVw+5FzKsq4tOTqQPnO+dM=
-=cdQo
+iQEcBAEBAgAGBQJUNX3zAAoJEBa/9Pad787EKTkIAL3hJ1aQloe+e5XRTMAxErwP
+22rKJ0+crOsAS81Nw90MTcrD2ZxwTSSkmwmHVFEHpZ6JdGZHIvcYFBo4ZFByYKiS
+znVnVngREsLCtLI+Lee3SbiuUTr17Bf52+smfGmF3k3AyeCiHfc69qaIEEkUR382
+UPRPDmfZGTV7JhLTtj1S42fCH8KXLkkytT/LoPXnfhTzFvpiIpzL+Oq5qELaLjHo
+UbhKzdDE3afhvwvVRyujm34ckXx2zh782Lv1aWR8aU11D38JBILSA7Qgu4gA1BYQ
+BC7hWxPwWlQdM1ltqN5+mgQ/sA4492OiXtmQaOF7KJyzv4ggE60AW+BpbIWVVWk=
+=Whjd
 -----END PGP SIGNATURE-----
