@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999916';
+our $VERSION='0.999999999917';
 
 
 use 5.005;
