@@ -121,7 +121,6 @@ our $cygwin_berkeley_db_mode = 777;
 our $progname=substr($0,(rindex $0,'/')+1,-3);
 our @tran=('','',0,$$."_".$^T,'',0);
 $ENV{OS}='' if !$ENV{OS};
-$ENV{HISTCONTROL}='ignorespace';
 my $md_='';our $thismonth='';our $thisyear='';
 ($md_,$thismonth,$thisyear)=(localtime)[3,4,5];
 my $mo_=$thismonth;my $yr_=$thisyear;
@@ -3138,7 +3137,7 @@ sub edit {
 
          },
          Select => 'One',
-         Banner => "\n   Choose a File to Edit :"
+         Banner => "\n   Choose a File to Edit:\n\n"
 
       );
       my $file=Menu(\%Menu_1);
@@ -12833,9 +12832,7 @@ our $determine_password=sub {
             unless ($skipflag) {
                undef $tpess;
                if (!$Net::FullAuto::FA_Core::cron &&
-                     !$Net::FullAuto::FA_Core::quiet &&
-                     !defined $main::showed_saved_pass) {
-                  $main::showed_saved_pass=1;
+                     !$Net::FullAuto::FA_Core::quiet) {
                   print "\n   Saved Password will Expire: ",
                      scalar localtime($ignore_expiration)."\n";
                   $Net::FullAuto::FA_Core::cache->set(
@@ -13214,9 +13211,7 @@ END
          delete $href->{"gatekeep_$username"};
       } else {
          if (!$Net::FullAuto::FA_Core::cron &&
-               !$Net::FullAuto::FA_Core::quiet &&
-               !defined $main::showed_saved_pass) {
-            $main::showed_saved_pass=1;
+               !$Net::FullAuto::FA_Core::quiet) {
             print "\n   Saved Password will Expire: ".
                scalar localtime($ignore_expiration)."\n";
             $Net::FullAuto::FA_Core::cache->set(
@@ -15104,9 +15099,7 @@ print $Net::FullAuto::FA_Core::MRLOG "BDB STATUS=$status<==\n"
          if ($Net::FullAuto::FA_Core::save_main_pass) {
             $passetts->[1]=$Net::FullAuto::FA_Core::choose_pass_expiration->();
             if (!$Net::FullAuto::FA_Core::cron &&
-                  !$Net::FullAuto::FA_Core::quiet &&
-                  !defined $main::showed_saved_pass) {
-               $main::showed_saved_pass=1;
+                  !$Net::FullAuto::FA_Core::quiet) {
                print "\n   Saved Password will Expire: ",
                      scalar localtime($passetts->[1])."\n";
                $cache->set($cache->{'key'},
@@ -17505,7 +17498,6 @@ sub new {
       $self->{_hostlabel}=[ $hostlabel,'' ];
    }
    if ($ftr_cmd) {
-print "FTR_CMD=$ftr_cmd\n";<STDIN>;
       $self->{_cmd_handle}=$ftr_cmd->{_cmd_handle};
       $self->{_sh_pid}=$ftr_cmd->{_sh_pid};
       $self->{_cmd_pid}=$ftr_cmd->{_cmd_pid};
@@ -21489,9 +21481,12 @@ print "DO AMAZON HANDLING\n";
                }
 print "DO OTHER\n"; 
                &Net::FullAuto::FA_Core::cleanup();
-            }
+            } 
 #print "do_slave ONE and ERROR=$error\n";
             return ('','read timed-out:do_slave')
+         } elsif ($@=~/can[']t open \/dev\/tty: No such device or/s) {
+            return '',
+               "can\'t open /dev/tty: No such device or address\n";
          } elsif ($@!~/Connection closed/ &&
                (-1==index $@, 'name not known')) {
             my $err=$@;
@@ -22182,6 +22177,8 @@ sub mirror
          return '',$die;
       } else { &Net::FullAuto::FA_Core::handle_error($die) }
    }
+   delete $baseFH->{_unaltered_basehash} if exists
+          $baseFH->{_unaltered_basehash};
    my $username=&Net::FullAuto::FA_Core::username();
    my $dest_output='';my $base_output='';my $lsgnu=0;
    my $num_of_levels='';my $mirrormap='';my $trantar='';
@@ -28597,7 +28594,8 @@ my $w2loop=0;
                   if ($previous_method && !$preferred) {
                      if ((!$Net::FullAuto::FA_Core::cron ||
                            $Net::FullAuto::FA_Core::debug) &&
-                           !$Net::FullAuto::FA_Core::quiet) {
+                           !$Net::FullAuto::FA_Core::quiet &&
+                           (-1==index $stderr,'/dev/tty: No')) {
                         print "Warning, Preferred Connection ",
                            "$previous_method Failed\n";
                         $cache->set($cache->{'key'},[0,
@@ -28607,7 +28605,7 @@ my $w2loop=0;
                      }
                      $preferred=1;
                   } else { $previous_method=$connect_method }
-                  $previous_method=$connect_method;
+                  #$previous_method=$connect_method;
                   if (lc($connect_method) eq 'telnet') {
                      eval { 
                         my $telnetpath=$Net::FullAuto::FA_Core::gbp->('telnet');
@@ -28938,37 +28936,109 @@ print $Net::FullAuto::FA_Core::MRLOG
                         }
                         if ($sshport) {
                            if ($idntfil) {
+                              if (-1<index $stderr,'/dev/tty: No') {
+                                 #$v='v' if $^O eq 'freebsd';
+                                 my $v='v';
+                                 #$v='vvv' if $Net::FullAuto::FA_Core::debug;
+                                 ($cmd_handle,$cmd_pid)=
+                                    &Net::FullAuto::FA_Core::pty_do_cmd(
+                                    [$Net::FullAuto::FA_Core::gbp->('bash').
+                                     'bash','-ic',
+                                    $Net::FullAuto::FA_Core::gbp->('ssh').
+                                     "ssh -$v $sshloginid\@$host",
+                                     '',$Net::FullAuto::FA_Core::slave])
+                                     or (&release_fa_lock(6543) &&
+                                         &Net::FullAuto::FA_Core::handle_error(
+                                         "couldn't launch ssh subprocess"));
+                              } else {
+                                 #$v='v' if $^O eq 'freebsd';
+                                 my $v='v';
+                                 #$v='vvv' if $Net::FullAuto::FA_Core::debug;
+                                 ($cmd_handle,$cmd_pid)=
+                                    &Net::FullAuto::FA_Core::pty_do_cmd(
+                                    ["${sshpath}ssh","-$v","-i$idntfil","-p$sshport",
+                                    "$sshloginid\@$host",
+                                    $Net::FullAuto::FA_Core::slave])
+                                    or &Net::FullAuto::FA_Core::handle_error(
+                                    "couldn't launch ssh subprocess");
+                              }
+                           } else {
+                              if (-1<index $stderr,'/dev/tty: No') {
+                                 #$v='v' if $^O eq 'freebsd';
+                                 my $v='v';
+                                 #$v='vvv' if $Net::FullAuto::FA_Core::debug;
+                                 ($cmd_handle,$cmd_pid)=
+                                    &Net::FullAuto::FA_Core::pty_do_cmd(
+                                    [$Net::FullAuto::FA_Core::gbp->('bash').
+                                     'bash','-ic',
+                                    $Net::FullAuto::FA_Core::gbp->('ssh').
+                                     "ssh -$v -p$sshport $sshloginid\@$host",
+                                     '',$Net::FullAuto::FA_Core::slave])
+                                     or (&release_fa_lock(6543) &&
+                                         &Net::FullAuto::FA_Core::handle_error(
+                                         "couldn't launch ssh subprocess"));
+                              } else {
+                                 #$v='v' if $^O eq 'freebsd';
+                                 my $v='v';
+                                 #$v='vvv' if $Net::FullAuto::FA_Core::debug;
+                                 ($cmd_handle,$cmd_pid)=
+                                    &Net::FullAuto::FA_Core::pty_do_cmd(
+                                    ["${sshpath}ssh","-$v","-p$sshport",
+                                    "$sshloginid\@$host",
+                                    $Net::FullAuto::FA_Core::slave])
+                                    or &Net::FullAuto::FA_Core::handle_error(
+                                    "couldn't launch ssh subprocess");
+                              }
+                           }
+                        } elsif ($idntfil) {
+                           if (-1<index $stderr,'/dev/tty: No') {
+                              #$v='v' if $^O eq 'freebsd';
+                              my $v='v';
+                              #$v='vvv' if $Net::FullAuto::FA_Core::debug;
                               ($cmd_handle,$cmd_pid)=
                                  &Net::FullAuto::FA_Core::pty_do_cmd(
-                                 ["${sshpath}ssh",'-v',"-i$idntfil","-p$sshport",
-                                 "$sshloginid\@$host",
-                                 $Net::FullAuto::FA_Core::slave])
-                                 or &Net::FullAuto::FA_Core::handle_error(
-                                 "couldn't launch ssh subprocess");
+                                 [$Net::FullAuto::FA_Core::gbp->('bash').
+                                  'bash','-ic',
+                                 $Net::FullAuto::FA_Core::gbp->('ssh').
+                                  "ssh -$v -i$idntfil $sshloginid\@$host",
+                                  '',$Net::FullAuto::FA_Core::slave])
+                                  or (&release_fa_lock(6543) &&
+                                      &Net::FullAuto::FA_Core::handle_error(
+                                      "couldn't launch ssh subprocess"));
                            } else {
                               ($cmd_handle,$cmd_pid)=
                                  &Net::FullAuto::FA_Core::pty_do_cmd(
-                                 ["${sshpath}ssh",'-v',"-p$sshport",
-                                 "$sshloginid\@$host",
+                                 ["${sshpath}ssh",'-v',"-i$idntfil","$sshloginid\@$host",
                                  $Net::FullAuto::FA_Core::slave])
                                  or &Net::FullAuto::FA_Core::handle_error(
                                  "couldn't launch ssh subprocess");
                            }
-                        } elsif ($idntfil) {
-#print "HERE WE ARE and ${sshpath}ssh -v -i$idntfil $sshloginid\@$host<==\n";<STDIN>;
-                           ($cmd_handle,$cmd_pid)=
-                              &Net::FullAuto::FA_Core::pty_do_cmd(
-                              ["${sshpath}ssh",'-v',"-i$idntfil","$sshloginid\@$host",
-                              $Net::FullAuto::FA_Core::slave])
-                              or &Net::FullAuto::FA_Core::handle_error(
-                              "couldn't launch ssh subprocess");
                         } else {
-                           ($cmd_handle,$cmd_pid)=
-                              &Net::FullAuto::FA_Core::pty_do_cmd(
-                              ["${sshpath}ssh",'-v',"$sshloginid\@$host",
-                              $Net::FullAuto::FA_Core::slave])
-                              or &Net::FullAuto::FA_Core::handle_error(
-                              "couldn't launch ssh subprocess");
+                           if (-1<index $stderr,'/dev/tty: No') {
+                              #$v='v' if $^O eq 'freebsd';
+                              my $v='v';
+                              #$v='vvv' if $Net::FullAuto::FA_Core::debug;
+                              ($cmd_handle,$cmd_pid)=
+                                 &Net::FullAuto::FA_Core::pty_do_cmd(
+                                 [$Net::FullAuto::FA_Core::gbp->('bash').
+                                  'bash','-ic',
+                                 $Net::FullAuto::FA_Core::gbp->('ssh').
+                                  "ssh -$v $sshloginid\@$host",
+                                  '',$Net::FullAuto::FA_Core::slave])
+                                  or (&release_fa_lock(6543) &&
+                                      &Net::FullAuto::FA_Core::handle_error(
+                                      "couldn't launch ssh subprocess"));
+                           } else {
+                              #$v='v' if $^O eq 'freebsd';
+                              my $v='v';
+                              #$v='vvv' if $Net::FullAuto::FA_Core::debug;
+                              ($cmd_handle,$cmd_pid)=
+                                 &Net::FullAuto::FA_Core::pty_do_cmd(
+                                 ["${sshpath}ssh","-$v","$sshloginid\@$host",
+                                 $Net::FullAuto::FA_Core::slave])
+                                 or &Net::FullAuto::FA_Core::handle_error(
+                                 "couldn't launch ssh subprocess");
+                           }
                         }
                         $cmd_handle=Net::Telnet->new(Fhopen => $cmd_handle,
                            Timeout => $cdtimeout);
@@ -29012,7 +29082,9 @@ print $Net::FullAuto::FA_Core::MRLOG
                              _cmd_type=>$cmd_type,
                              _connect=>$_connect },0,'_notnew_');
                      if ($stderr) {
-                        if ($rm_cnt!=$#connect_method) {
+                        if (-1<index $stderr,'/dev/tty: No') {
+                           next WH;
+                        } elsif ($rm_cnt!=$#connect_method) {
                            $cmd_handle->close;
                            next CM3;
                         } else {
@@ -31712,7 +31784,7 @@ print $Net::FullAuto::FA_Core::MRLOG "OOOOOOOOOOOO=$o\n" if $Net::FullAuto::FA_C
                                  $output=unpack("x$llc a*",$output);
                               }
                               $first=0;$growoutput=$output;
-                              $growoutput=~s/^(.*)(?:$cmd_prompt)+$/$1/s;
+                              $growoutput=~s/^(.*)($cmd_prompt)*$/$1/s;
 print $Net::FullAuto::FA_Core::MRLOG "GRO_OUT_AFTER_MEGA_STRIP=$growoutput\n"
    if $Net::FullAuto::FA_Core::log && (-1<index $Net::FullAuto::FA_Core::MRLOG,'*');
                               if ($output=~/$cmd_prompt$/s &&
@@ -31795,6 +31867,7 @@ print $Net::FullAuto::FA_Core::MRLOG "WE DID NOTHING TO STDOUT - $output\n"
 #print "LV_CMD=$lv_cmd<== and ",`od -a brianout.txt`,"\n";
 #unlink "brianout.txt";
 #print "EXAMINERR=>OPUT=$output<= and LV_CMD=$lv_cmd<=\n";
+
                      } else { $appendout=$output;next }
                   }
 print $Net::FullAuto::FA_Core::MRLOG "PAST THE ALARM3\n"
@@ -31814,13 +31887,8 @@ print $Net::FullAuto::FA_Core::MRLOG "GOT STRIPPED_COMMAND_FLAG AND GROWOUTPUT=$
                      unless ($growoutput) {
 print $Net::FullAuto::FA_Core::MRLOG "NO GROWOUTPUTTTTTTTTTTTTT\n" if $Net::FullAuto::FA_Core::log && (-1<index $Net::FullAuto::FA_Core::MRLOG,'*');
                         if ($output && unpack('a1',$output) eq '[') {
-                           my $tout=$output;
                            if ($output=~/^\[A(\[C)+\[K1\s*/s) {
                               next FETCH;
-                           } elsif ($tout=~s/(?:\[A|\[K)//g) {
-                              $tout=~s/\s//g;
-                              $tout=~s/$cmd_prompt//g;
-                              next FETCH if $tout eq $test_stripped_output;
                            }
                         }
                         if ($output=~/^\s?$cmd_prompt/) {
@@ -32099,7 +32167,7 @@ print $Net::FullAuto::FA_Core::MRLOG "OOOOOOOOTTTT=$o\n" if $Net::FullAuto::FA_C
                                  $output=unpack("x$llc a*",$output);
                               }
                               $first=0;$growoutput=$output;
-                              $growoutput=~s/^(.*)(?:$cmd_prompt)+$/$1/s;
+                              $growoutput=~s/^(.*)($cmd_prompt)*$/$1/s;
 print $Net::FullAuto::FA_Core::MRLOG "GRO_OUT_AFTER_MEGA_STRIPTTTTTTTTTT=$growoutput\n"
    if $Net::FullAuto::FA_Core::log && (-1<index $Net::FullAuto::FA_Core::MRLOG,'*');
                               $command_stripped_from_output=1;
